<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--<ImageView-->
                <!--android:id="@+id/produit_image"-->
                <!--android:layout_width="105dp"-->
                <!--android:layout_height="92dp"-->
                <!--android:layout_marginStart="55dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintEnd_toStartOf="@+id/produit_nom"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent"-->
                <!--app:srcCompat="@drawable/ic_barcode" />-->

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/produit_image"
                    android:layout_width="105dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/produit_nom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_barcode" />

                <TextView
                    android:id="@+id/produit_nom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="11dp"
                    android:text="@string/nom_produit"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/produit_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/produit_poids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/poids_produit"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/produit_image"
                    app:layout_constraintTop_toBottomOf="@+id/produit_nom" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

                <Spinner
                    android:id="@+id/produit_rayon"
                    style="@style/SpinnerStyle"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/produit_piece"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/produit_piece"
                    style="@style/SpinnerStyle"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/produit_rayon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <EditText
                    android:id="@+id/produit_prix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prix_du_produit"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/produit_prix_label"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/produit_prix_unit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/devise_monnaie"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/produit_prix"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/produit_dlc"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/greyback"
                    android:elevation="0dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/date_default"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/produit_dlc_label"
                    app:layout_constraintTop_toBottomOf="@+id/produit_quantité"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/produit_prix_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/prix"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/produit_quantite_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/quantit"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/produit_prix_label" />

                <TextView
                    android:id="@+id/produit_dlc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/dlc"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/produit_quantite_label" />

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/produit_quantité"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    app:custom_layout="@layout/number_picker_custom_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.062"
                    app:layout_constraintStart_toEndOf="@+id/produit_quantite_label"
                    app:layout_constraintTop_toBottomOf="@+id/produit_prix"
                    numberpicker:focusable="false"
                    numberpicker:max="99"
                    numberpicker:min="0"
                    numberpicker:unit="1">

                </com.travijuu.numberpicker.library.NumberPicker>
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/sauvegarde_product_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="2dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/enregistrer"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>







</android.support.constraint.ConstraintLayout>